updated tiktok lib for performance update and some fixes it had. also removed depreceated code
Signed-off-by: Thunderrock424242 <masonjoshua8@gmail.com>